# src/swagger-output.json
@@ -109,6 +109,33 @@
           }
         }
       },
+      "Admin": {
+        "type": "object",
+        "required": [
+          "id",
+          "user_id",
+          "email",
+          "status",
+          "create_date"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "user_id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string"
+          },
+          "create_date": {
+            "type": "string"
+          }
+        }
+      },
       "Event": {
         "type": "object",
         "required": [
@@ -728,6 +755,90 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/admin/get-admins/{page}/{limit}": {
+      "get": {
+        "summary": "Returns a list of administrators",
+        "description": "Fetch a paginated list of items with limit and page parameters",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "path",
+            "description": "The page number. Defaults to 1 if not provided.",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "example": 1
+            }
+          },
+          {
+            "name": "limit",
+            "in": "path",
+            "description": "The number of items to display per page. Defaults to 25 if not provided.",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "example": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of administrators (paginated)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "page": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 1
+                    },
+                    "limit": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 10
+                    },
+                    "totalItems": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 100
+                    },
+                    "totalPages": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 10
+                    },
+                    "advisers": {
+                      "type": "array",
+                      "advisers": {
+                        "type": "object",
+                        "schema": {
+                          "$ref": "#/components/schemas/Admin"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A client error occurred"
+          },
+          "500": {
+            "description": "Server error"
           }
         }
       }
